--- a/src/website/highlights/src/components/Addtask_popup.module.css
+++ b/src/website/highlights/src/components/Addtask_popup.module.css
@@ -1,15 +1,4 @@
-.custom-dialog {
-   /* padding: 200px; */
-   /* height: 200px; */
-   /* padding-left: 200px; */
-   /* width: 800px; */
-   /* height: 1000px; */
-   /* background-color: #42A3FC; */
-  
- }
- 
- 
- 
+
  .custom-input {
    /* background-color: #D9D9D9; */
    height: 40px;
@@ -76,4 +65,32 @@
    background-color: #42A3FC;
  } */
 
+ .flag-none {
+   width: 10px;
+   height: 10px;
+   background-color: transparent;
+   display: inline-block;
+   margin-right: 8px;
+ }
+ .flag-low {
+   width: 10px;
+   height: 10px;
+   background-color: green;
+   display: inline-block;
+   margin-right: 8px;
+ }
+ .flag-medium {
+   width: 10px;
+   height: 10px;
+   background-color: yellow;
+   display: inline-block;
+   margin-right: 8px;
+ }
+ .flag-high {
+   width: 10px;
+   height: 10px;
+   background-color: red;
+   display: inline-block;
+   margin-right: 8px;
+ }
  
