--- a/src/website/highlights/src/components/DaySchedule/DaySchedule.module.css
+++ b/src/website/highlights/src/components/DaySchedule/DaySchedule.module.css
@@ -1,5 +1,22 @@
 /* DaySchedule.module.css */
 
+
+.calendarContainer {
+          margin-top: 50px;
+          width: 100%;
+          max-width: 600px;
+          margin: 0 auto;
+          font-family: 'Roboto', sans-serif;
+          padding: 10%;
+          background:linear-gradient(135deg, #f5f7fa, #c3cfe200);
+          
+          
+          border-radius: 15px;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+          
+        }
+
+
 .container {
           background-color: #e0f7fa;
           border-radius: 12px; /* Slightly rounded corners */
