--- a/src/website/highlights/src/components/DaySchedule/DaySchedule.module.css
+++ b/src/website/highlights/src/components/DaySchedule/DaySchedule.module.css
@@ -120,7 +120,6 @@
           font-weight: bold;
           color: #333;
           display: flex;
-          align-items: ;
         }
         
         .time {
@@ -141,4 +140,30 @@
         .menuButton:hover {
           color: #616161;
         }
+        .DaySchedule_task__FSlWX {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          padding: 15px;
+          background-color: #ffffff;
+          border-radius: 10px;
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+          transition: background-color 0.3s ease;
+        }
+        
+        .taskDetails {
+          display: flex;
+          align-items: center;
+          flex-grow: 1;
+          margin-left: 10px; /* Adjust as needed */
+        }
+        
+        .taskTitle {
+          flex-grow: 1;
+        }
+        
+        .taskTime {
+          margin-left: auto;
+        }
+        
         
