set the the highlights and the timer details from the backend to front end

--- a/src/website/highlights/src/components/Stopwatch/Stopwatch.module.css
+++ b/src/website/highlights/src/components/Stopwatch/Stopwatch.module.css
@@ -97,6 +97,12 @@
         .focusLink a:hover {
           text-decoration: underline;
         }
+        .taskContainer {
+          padding: 20px;
+        }
+        .today{
+          padding: 10%;
+        }
         
         /* Mobile responsiveness */
         @media (max-width: 600px) {
