--- a/src/website/highlights/src/components/DaySchedule/DaySchedule.module.css
+++ b/src/website/highlights/src/components/DaySchedule/DaySchedule.module.css
@@ -20,7 +20,15 @@
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   
         }
-
+        .dateContainer {
+          font-family: 'Roboto', sans-serif;
+          display: flex;
+          justify-content: space-evenly;;
+          padding: 0 30px;
+          font-size: 24px;
+          color: #37474f;
+          margin-bottom: 80px;
+        }
 
 .container {
           background-color: #e0f7fa;
