--- a/src/landingpage/src/components/help/Help.scss
+++ b/src/landingpage/src/components/help/Help.scss
@@ -125,6 +125,7 @@
             text-align: center;
             border-radius: 8px;
             margin-bottom: 20px;
+            transition: transform 0.4s ease;
 
             @include respond(phone) {
                 width: 100%;
