--- a/src/website/highlights/src/components/Navbar/Navbar.module.css
+++ b/src/website/highlights/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,14 @@
 .navbar {
-    background-color: var(--mantine-color-body);
     padding: var(--mantine-spacing-md);
     padding-top: 0;
     display: flex;
     flex-direction: column;
+}
+
+.userMenu {
+    display: block;
+    width: 100%;
+    color: light-dark(var(--mantine-color-black), var(--mantine-color-dark-0));
 }
 
 .section {
@@ -32,7 +37,7 @@
     color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
 
     &:hover {
-        background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
+        background-color: light-dark(var(--mantine-color-blue-light), var(--mantine-color-dark-6));
         color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
     }
 
@@ -40,7 +45,7 @@
 
         &,
         &:hover {
-            background-color: var(--mantine-color-blue-light);
+            background-color: var(--mantine-color-blue-light-hover);
             color: var(--mantine-color-blue-light-color);
 
             .mainLinkIcon {
