--- a/src/website/highlights/src/components/Navbar/Navbar.module.css
+++ b/src/website/highlights/src/components/Navbar/Navbar.module.css
@@ -31,13 +31,13 @@
     display: flex;
     align-items: center;
     width: 100%;
-    padding: rem(8px) var(--mantine-spacing-xs);
+    padding: rem(6px) var(--mantine-spacing-xs);
     border-radius: var(--mantine-radius-sm);
     font-weight: 500;
     color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
 
     &:hover {
-        background-color: light-dark(var(--mantine-color-blue-light), var(--mantine-color-dark-6));
+        background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
         color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
     }
 
@@ -45,7 +45,7 @@
 
         &,
         &:hover {
-            background-color: var(--mantine-color-blue-light-hover);
+            background-color: var(--mantine-color-blue-light);
             color: var(--mantine-color-blue-light-color);
 
             .mainLinkIcon {
